syntax = "proto3";

import "google/protobuf/wrappers.proto";

package order;
option go_package = "./order";

service OrderManagement {
    // 패턴 1 : 단일 RPC 정의
    rpc addOrder(Order) returns (google.protobuf.StringValue);          
    rpc getOrder(google.protobuf.StringValue) returns (Order);

    // 패턴 2 : 서버 스트리밍 RPC 정의
    rpc searchOrders(google.protobuf.StringValue) returns (stream Order);   

    // 패턴 3 : 클라이언트 스트리밍 RPC 정의
    rpc updateOrders(stream Order) returns (google.protobuf.StringValue);   

    // 패턴 4 : 양방향 스트리밍 RPC 정의
    rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}


message Order {
    string id = 1;
    repeated string items = 2;  // 하나의 주문은 여러 개의 아이템이 있음
    string description = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order orderList = 3;   // 배송지 기준으로 묶인 주문
}